# pointer-calhacks

./: CALENDAR_OAUTH_SETUP.md  README.md  build-backend.sh  index.html  package-lock.json  package.json  run-backend-dev.sh  setup-arrow.sh  vite.config.ts
src/: App.tsx  Overlay.tsx  main.tsx
src-python/: .env.example  PROJECT_STRUCTURE.md  README.md  agent.py  ai_handler.py  build.py  clipboard_manager.py  cursor_manager.py  keyboard_monitor.py  main.py  plugin_selector.py  populate_settings.py  requirements.txt  router.py  test_email_flow.py  test_plugin_selector.py
src-python/agents/: __init__.py  coordinator.py  summarize.py  terminal_cmd.py
src-python/hooks/: runtime-quartz.py
src-python/plugins/: base_plugin.py  calendar_plugin.py  chat_plugin.py  code_plugin.py  email_plugin.py  init.py  notes_plugin.py  screenshot_plugin.py  slack_plugin.py  terminal_plugin.py
src-python/pointer_backend/: agent.py  server.py
src-python/routes/: README.md  agent.py  asi.py  calendar_auth.py  health.py  hotkey.py  rag.py  settings.py  storage.py
src-python/scripts/: build.py  populate_settings.py
src-python/tools/: __init__.py  calendar.py  emailer.py  rag.py  vision.py
src-python/utils/: __init__.py  accessibility.py  keyboard_monitor.py  screenshot_handler.py  settings_manager.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AsiOnePanel.tsx  CalendarPanel.tsx  EnvVarsPanel.tsx  HotkeyPanel.tsx  OverlayInput.tsx  RagPanel.tsx  SettingsPanel.tsx  Toast.tsx  (+2 more)
(+5 files in other folders)
