[package]
name = "pointer"
version = "0.0.0"
description = "AI-Powered Cursor Assistant"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cocoa = "0.25"
objc = "0.2"

[features]
default = []
